testsuite/gnatprove/tests/V209-030__cut_operation_context/test.out
cut_operations_context.adb:7:22: error: call to a cut operation in an incorrect context is not allowed in SPARK
cut_operations_context.adb:7:22: error: violation of aspect SPARK_Mode at line 2
cut_operations_context.adb:11:14: error: call to a cut operation in an incorrect context is not allowed in SPARK
cut_operations_context.adb:11:14: error: violation of aspect SPARK_Mode at line 2
cut_operations_context.adb:14:13: error: call to a cut operation in an incorrect context is not allowed in SPARK
cut_operations_context.adb:14:13: error: violation of aspect SPARK_Mode at line 2
cut_operations_context.adb:18:25: error: call to a cut operation in an incorrect context is not allowed in SPARK
cut_operations_context.adb:18:25: error: violation of aspect SPARK_Mode at line 2
cut_operations_context.adb:23:27: error: call to a cut operation in an incorrect context is not allowed in SPARK
cut_operations_context.adb:23:27: error: violation of aspect SPARK_Mode at line 2
cut_operations_context.adb:30:48: error: call to a cut operation in an incorrect context is not allowed in SPARK
cut_operations_context.adb:30:48: error: violation of aspect SPARK_Mode at line 2
cut_operations_context.adb:31:31: error: subtype of "Boolean" is not allowed in SPARK (due to call to a cut operation in an incorrect context)
cut_operations_context.adb:31:31: error: violation of aspect SPARK_Mode at line 2
cut_operations_context.adb:31:36: error: subtype of "Boolean" is not allowed in SPARK (due to call to a cut operation in an incorrect context)
cut_operations_context.adb:31:36: error: violation of aspect SPARK_Mode at line 2
cut_operations_context.adb:43:54: error: call to a cut operation in an incorrect context is not allowed in SPARK
cut_operations_context.adb:43:54: error: violation of aspect SPARK_Mode at line 2
cut_operations_context.adb:43:77: error: "D" is not allowed in SPARK (due to call to a cut operation in an incorrect context)
cut_operations_context.adb:43:77: error: violation of aspect SPARK_Mode at line 2
cut_operations_context.adb:50:32: error: call to a cut operation in an incorrect context is not allowed in SPARK
cut_operations_context.adb:50:32: error: violation of aspect SPARK_Mode at line 2
gnatprove: error during flow analysis and proof
